/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.flow.models";

package net.flow;

// Corresponds to org.onosproject.net.flow.FlowRule enums.
enum FlowRemoveReasonProto {
    IDLE_TIMEOUT = 0;
    HARD_TIMEOUT = 1;
    DELETE = 2;
    GROUP_DELETE = 3;
    METER_DELETE = 4;
    EVICTION = 5;
    NO_REASON = 6;
}